--- a/index.html
+++ b/index.html
@@ -44,12 +44,9 @@ and a podcast out of this is on soundcloud: <br><br> <br>
 
 I am in excellent company:<br><br>
 <a href="https://soundcloud.com/robinly/yoshua-bengio-from-deep-learning-to-consciousness-interview-by-song-han-neurips-2019">Yoshua Bengio</a><br>
-<a href="https://soundcloud.com/robinly/kai-fu-lee-the-era-of-ai-the-rise-of-china-the-future-of-work">Kai Fu Lee</a><br>
+<a href="https://soundcloud.com/robinly/kai-fu-lee-the-era-of-ai-the-rise-of-china-the-future-of-work">Kai-Fu Lee</a><br>
 <a href="https://soundcloud.com/robinly/the-future-of-distributed-machine-learning-max-welling-u-of-amsterdam-qualcomm-neurips-2019">Max Welling</a><br>
-<a href="https://soundcloud.com/robinly/my-first-cvpr-christopher-manning-professor-director-stanford-ai-lab">Christopher Manning</a>
-
-
-</br>
+<a href="https://soundcloud.com/robinly/my-first-cvpr-christopher-manning-professor-director-stanford-ai-lab">Christopher Manning</a> <br>
 
 <br>
 <br>
@@ -85,7 +82,7 @@ you will meet your destiny. Wait three days and I shall be alive again. </br>
 <h3>February 3, 2020</h3>
 <h1>Samuel in San Diego</h1>
 
-<br><a href="https://eduardgorbunov.github.io/index.html#header3-a">Samuel Horváth</a>
+<br><a href="https://samuelhorvath.github.io">Samuel Horváth</a>
 is in San Diego, and will soon be presenting the paper <a href="https://arxiv.org/abs/1901.08689">"Don’t jump through hoops and remove those loops:
 SVRG and Katyusha are better without the outer loop"</a>, joint work with Dmitry Kovalev and myself,
 at <a href="http://alt2020.algorithmiclearningtheory.org">ALT 2020</a> in San Diego.<br><br> Here is the
@@ -103,7 +100,6 @@ Samuel will be back at KAUST in about 10 days.<br>
 <h1>Eduard Gorbunov is Visting Again</h1>
 
 <br><a href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard Gorbunov</a> came for a research visit - this is his third time at KAUST. This time, he wil stay for about 2 months.
-
 
 <br>
 <br>
@@ -123,6 +119,7 @@ Our paper <a href="https://arxiv.org/abs/1902.01272">"A stochastic derivative-fr
 We have just prepared a poster, here it is:<br>
 <br>
 <a href="posters/Poster-STP_IS-AAAI20.pdf"><img src="posters/Poster-STP_IS-AAAI20_small.png" alt="STP" border="0" height="500"></a><br>
+
 <br>
 <br>
 <img alt="" src="imgs/fancy-line.png" width="196" height="36">
@@ -748,45 +745,48 @@ href="https://www.linkedin.com/pulse/neurips2019-robinly-interviews-prof-yoshua-
           <img alt="" src="imgs/fancy-line.png" width="196" height="36">
           <br>
           <br>
-          <h3>December 3, 2019</h3>
-          <h1>New Paper</h1>
-          <br>
-          <span class="important">New paper out: </span><a
-            href="https://arxiv.org/abs/1912.01597">"Stochastic Newton
-            and Cubic Newton Methods with Simple Local Linear-Quadratic
-            Rates"</a> - joint work with <a
-            href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a> and
-          <a href="https://konstmish.github.io">Konstantin Mishchenko.</a><br>
-          <br>
-          Abstract: <i>We present two new remarkably simple stochastic
-            second-order methods for minimizing the average of a very
-            large number of sufficiently smooth and strongly convex
-            functions. The first is a stochastic variant of Newton's
-            method (SN), and the second is a stochastic variant of
-            cubically regularized Newton's method (SCN). We establish
-            local linear-quadratic convergence results. Unlike existing
-            stochastic variants of second order methods, which require
-            the evaluation of a large number of gradients and/or
-            Hessians in each iteration to guarantee convergence, our
-            methods do not have this shortcoming. For instance, the
-            simplest variants of our methods in each iteration need to
-            compute the gradient and Hessian of a single randomly
-            selected function only. In contrast to most existing
-            stochastic Newton and quasi-Newton methods, our approach
-            guarantees local convergence faster than with first-order
-            oracle and adapts to the problem's curvature. Interestingly,
-            our method is not unbiased, so our theory provides new
-            intuition for designing new stochastic methods.</i> <br>
-          <br>
-          This work was accepted as a spotlight paper to the <a
-            href="https://sites.google.com/site/optneurips19/">NeurIPS
-            2019 Workshop "Beyond First Order Methods in ML"</a>, taking
-          place in Vancouver on December 13, 2019. <br>
-          <br>
-          <br>
-          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
-          <br>
-          <br>
+
+<h3>December 3, 2019</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out: </span><a
+href="https://arxiv.org/abs/1912.01597">"Stochastic Newton and Cubic Newton Methods with Simple Local Linear-Quadratic Rates"</a> -
+joint work with <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a> and
+<a href="https://konstmish.github.io">Konstantin Mishchenko.</a><br>
+<br>
+
+Abstract: <i>We present two new remarkably simple stochastic
+second-order methods for minimizing the average of a very
+large number of sufficiently smooth and strongly convex
+functions. The first is a stochastic variant of Newton's
+method (SN), and the second is a stochastic variant of
+cubically regularized Newton's method (SCN). We establish
+local linear-quadratic convergence results. Unlike existing
+stochastic variants of second order methods, which require
+the evaluation of a large number of gradients and/or
+Hessians in each iteration to guarantee convergence, our
+methods do not have this shortcoming. For instance, the
+simplest variants of our methods in each iteration need to
+compute the gradient and Hessian of a single randomly
+selected function only. In contrast to most existing
+stochastic Newton and quasi-Newton methods, our approach
+guarantees local convergence faster than with first-order
+oracle and adapts to the problem's curvature. Interestingly,
+our method is not unbiased, so our theory provides new
+intuition for designing new stochastic methods.</i> <br> <br>
+
+This work was accepted as a spotlight paper to the <a
+href="https://sites.google.com/site/optneurips19/">NeurIPS
+2019 Workshop "Beyond First Order Methods in ML"</a>, taking
+place in Vancouver on December 13, 2019. <br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
           <h3>November 24, 2019</h3>
           <h1>Machine Learning Models Gather Momentum </h1>
           <br>
