Better Theory for SGD in the Nonconvex World

--- a/index.html
+++ b/index.html
@@ -29,6 +29,37 @@
       <div id="wrapper" class="main">
         <div id="content">
 
+<h3>February 9, 2020</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2002.03329">"Better Theory for SGD in the Nonconvex World"</a> -
+joint work with <a href="https://rka97.github.io">Ahmed Khaled</a>.<br>
+<br>
+
+Abstract: <i>Large-scale nonconvex optimization problems are ubiquitous in modern machine learning,
+and among practitioners interested in solving them, Stochastic Gradient Descent (SGD)
+reigns supreme. We revisit the analysis of SGD in the nonconvex setting and propose a new
+variant of the recently introduced expected smoothness assumption which governs the behaviour
+of the second moment of the stochastic gradient. We show that our assumption is both more general
+and more reasonable than assumptions made in all prior work. Moreover, our results yield the
+optimal $O(\epsilon^{-4})$ rate for finding a stationary point of nonconvex smooth functions, and
+recover the optimal $O(\epsilon^{-1})$ rate for finding a global solution if the Polyak-Łojasiewicz
+condition is satisfied. We compare against convergence rates under convexity and prove a theorem
+on the convergence of SGD under Quadratic Functional Growth and convexity, which might be of
+independent interest. Moreover, we perform our analysis in a framework which allows for a detailed
+study of the effects of a wide array of sampling strategies and minibatch sizes for finite-sum
+optimization problems. We corroborate our theoretical results with experiments on real and
+synthetic data.</i> <br> 
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 <h3>February 8, 2020</h3>
 <h1>Interview by Robin.ly for their Leaders in AI Platform</h1>
 
@@ -630,116 +661,118 @@ href="https://www.linkedin.com/pulse/neurips2019-robinly-interviews-prof-yoshua-
           <img alt="" src="imgs/fancy-line.png" width="196" height="36">
           <br>
           <br>
-          <h3>December 4, 2019</h3>
-          <h1>Our Work to be Presented at NeurIPS 2019</h1>
-          <br>
-          We will present several papers at NeurIPS, in the main
-          conference and at some of the workshops. Here they are, listed
-          by date of presentation:<br>
-          <br>
-          <h2>Main Conference</h2>
-          1) <a href="https://arxiv.org/abs/1905.10874">RSN: Randomized
-            Subspace Newton</a><br>
-          Robert Mansel Gower, Dmitry Kovalev, Felix Lieder and Peter
-          Richtárik<br>
-          <a
-            href="https://nips.cc/Conferences/2019/Schedule?showEvent=13295">schedule</a><br>
-          Dec 10<br>
-          <br>
-          <a href="posters/Poster-RSN.pdf"><img
-              src="posters/Poster-RSN_small.png" alt="RSN" border="0"
-              width="500" height="377"></a><br>
-          <br>
-          2) <a href="https://arxiv.org/abs/1905.11768">Stochastic
-            proximal Langevin algorithm: potential splitting and
-            nonasymptotic rates</a><br>
-          Adil Salim, Dmitry Kovalevand Peter Richtárik<br>
-          <a
-            href="https://nips.cc/Conferences/2019/Schedule?showEvent=15749">schedule</a><br>
-          Dec 10<br>
-          <br>
-          <a href="posters/Poster-SPLA.pdf"><img
-              src="posters/Poster-SPLA_small.png" alt="SPLA" border="0"
-              width="500" height="375"></a><br>
-          <br>
-          3) <a href="https://arxiv.org/abs/1906.04370">Maximum mean
-            discrepancy gradient flow</a><br>
-          Michael Arbel, Anna Korba, Adil Salim and Arthur Gretton<br>
-          <a
-            href="https://nips.cc/Conferences/2019/Schedule?showEvent=13759">schedule</a><br>
-          Dec 10<br>
-          <br>
-          4) <a href="https://arxiv.org/abs/1904.09265">SSRGD: Simple
-            stochastic recursive gradient descent for escaping saddle
-            points</a><br>
-          Zhize Li<br>
-          <a
-            href="https://nips.cc/Conferences/2019/Schedule?showEvent=13368">schedule<br>
-          </a>Dec 10 <br>
-          <br>
-          5) <a href="https://arxiv.org/abs/1905.12412">A unified
-            variance-reduced accelerated gradient method for convex
-            optimization</a><br>
-          Zhize Li and Guanghui Lan<br>
-          <a
-            href="https://nips.cc/Conferences/2019/Schedule?showEvent=14058">schedule</a><br>
-          Dec 11<br>
-          <br>
-          <h2>Beyond First Order Methods in ML (Dec 13) </h2>
-          6) <a href="https://arxiv.org/abs/1912.01597">Stochastic
-            Newton and cubic Newton methods with simple local
-            linear-quadratic rates</a><br>
-          Dmitry Kovalev, Konstantin Mishchenko and Peter Richtárik<br>
-          <br>
-          <a href="posters/Poster-SN.pdf"><img
-              src="posters/Poster-SN_small.png" alt="Stochastic Newton
-              Methods" border="0" width="500" height="374"></a><br>
-          <h2>Workshop on Federated Learning for Data Privacy and
-            Confidentiality (Dec 13) </h2>
-          7) <a href="https://arxiv.org/abs/1909.04716">Gradient
-            descent with compressed iterates</a><br>
-          Ahmed Khaled and Peter Richtárik<br>
-          <br>
-          <a href="posters/Poster-GDCI.pdf"><img
-              src="posters/Poster-GDCI_small.png" alt="GDCI" border="0"
-              width="368" height="500"></a><br>
-          <br>
-          8) <a href="https://arxiv.org/abs/1909.04746">Better
-            communication complexity for local SGD</a><br>
-          Ahmed Khaled, Konstantin Mishchenko and Peter Richtárik<br>
-          <br>
-          <a href="posters/Poster-LocalSGD.pdf"><img
-              src="posters/Poster-LocalSGD_small.png" alt="Local SGD"
-              border="0" width="373" height="500"></a><br>
-          <br>
-          9) <a href="https://arxiv.org/abs/1909.04715">First analysis
-            of local GD on heterogeneous data</a><br>
-          Ahmed Khaled, Konstantin Mishchenko and Peter Richtárik<br>
-          <br>
-          <h2>Optimal Transport &amp; Machine Learning (Dec 13)</h2>
-          10) <a href="https://arxiv.org/abs/1909.06918">Sinkhorn
-            algorithm as a special case of stochastic mirror descent</a><br>
-          Konstantin Mishchenko<br>
-          <br>
-          <a href="posters/Poster-Sinkhorn.pdf"><img
-              src="posters/Poster-Sinkhorn_small.png" alt="Sinhorn"
-              border="0" width="500" height="375"></a><br>
-          <h2>Optimization Foundations for Reinforcement Learning (Dec
-            14) <br>
-          </h2>
-          11) <a href="https://arxiv.org/abs/1905.13278">A stochastic
-            derivative free optimization method with momentum</a> <br>
-          Eduard Gorbunov, Adel Bibi, Ozan Sener, El Houcine Bergou and
-          Peter Richtárik<br>
-          <br>
-          <a href="posters/Poster-SMTP.pdf"><img
-              src="posters/Poster-SMTP_small.png" alt="SMTP" border="0"
-              width="371" height="500"></a><br>
-          &nbsp;<br>
-          12) <a href="https://arxiv.org/abs/1905.11373">Revisiting
-            stochastic extragradient</a><br>
-          Konstantin Mishchenko, Dmitry Kovalev, Egor Shulgin, Peter
-          Richtárik, and Yura Malitsky<br>
+
+<h3>December 4, 2019</h3>
+<h1>Our Work to be Presented at NeurIPS 2019</h1>
+<br>
+We will present several papers at NeurIPS, in the main
+conference and at some of the workshops. Here they are, listed
+by date of presentation:<br>
+<br>
+<h2>Main Conference</h2>
+1) <a href="https://arxiv.org/abs/1905.10874">RSN: Randomized
+Subspace Newton</a><br>
+Robert Mansel Gower, Dmitry Kovalev, Felix Lieder and Peter
+Richtárik<br>
+<a
+href="https://nips.cc/Conferences/2019/Schedule?showEvent=13295">schedule</a><br>
+Dec 10<br>
+<br>
+<a href="posters/Poster-RSN.pdf"><img
+src="posters/Poster-RSN_small.png" alt="RSN" border="0"
+width="500" height="377"></a><br>
+<br>
+2) <a href="https://arxiv.org/abs/1905.11768">Stochastic
+proximal Langevin algorithm: potential splitting and
+nonasymptotic rates</a><br>
+Adil Salim, Dmitry Kovalevand Peter Richtárik<br>
+<a
+href="https://nips.cc/Conferences/2019/Schedule?showEvent=15749">schedule</a><br>
+Dec 10<br>
+<br>
+<a href="posters/Poster-SPLA.pdf"><img
+src="posters/Poster-SPLA_small.png" alt="SPLA" border="0"
+width="500" height="375"></a><br>
+<br>
+3) <a href="https://arxiv.org/abs/1906.04370">Maximum mean
+discrepancy gradient flow</a><br>
+Michael Arbel, Anna Korba, Adil Salim and Arthur Gretton<br>
+<a
+href="https://nips.cc/Conferences/2019/Schedule?showEvent=13759">schedule</a><br>
+Dec 10<br>
+<br>
+4) <a href="https://arxiv.org/abs/1904.09265">SSRGD: Simple
+stochastic recursive gradient descent for escaping saddle
+points</a><br>
+Zhize Li<br>
+<a
+href="https://nips.cc/Conferences/2019/Schedule?showEvent=13368">schedule<br>
+</a>Dec 10 <br>
+<br>
+5) <a href="https://arxiv.org/abs/1905.12412">A unified
+variance-reduced accelerated gradient method for convex
+optimization</a><br>
+Zhize Li and Guanghui Lan<br>
+<a
+href="https://nips.cc/Conferences/2019/Schedule?showEvent=14058">schedule</a><br>
+Dec 11<br>
+<br>
+<h2>Beyond First Order Methods in ML (Dec 13) </h2>
+6) <a href="https://arxiv.org/abs/1912.01597">Stochastic
+Newton and cubic Newton methods with simple local
+linear-quadratic rates</a><br>
+Dmitry Kovalev, Konstantin Mishchenko and Peter Richtárik<br>
+<br>
+<a href="posters/Poster-SN.pdf"><img
+src="posters/Poster-SN_small.png" alt="Stochastic Newton
+Methods" border="0" width="500" height="374"></a><br>
+<h2>Workshop on Federated Learning for Data Privacy and
+Confidentiality (Dec 13) </h2>
+7) <a href="https://arxiv.org/abs/1909.04716">Gradient
+descent with compressed iterates</a><br>
+Ahmed Khaled and Peter Richtárik<br>
+<br>
+<a href="posters/Poster-GDCI.pdf"><img
+src="posters/Poster-GDCI_small.png" alt="GDCI" border="0"
+width="368" height="500"></a><br>
+<br>
+8) <a href="https://arxiv.org/abs/1909.04746">Better
+communication complexity for local SGD</a><br>
+Ahmed Khaled, Konstantin Mishchenko and Peter Richtárik<br>
+<br>
+<a href="posters/Poster-LocalSGD.pdf"><img
+src="posters/Poster-LocalSGD_small.png" alt="Local SGD"
+border="0" width="373" height="500"></a><br>
+<br>
+9) <a href="https://arxiv.org/abs/1909.04715">First analysis
+of local GD on heterogeneous data</a><br>
+Ahmed Khaled, Konstantin Mishchenko and Peter Richtárik<br>
+<br>
+<h2>Optimal Transport &amp; Machine Learning (Dec 13)</h2>
+10) <a href="https://arxiv.org/abs/1909.06918">Sinkhorn
+algorithm as a special case of stochastic mirror descent</a><br>
+Konstantin Mishchenko<br>
+<br>
+<a href="posters/Poster-Sinkhorn.pdf"><img
+src="posters/Poster-Sinkhorn_small.png" alt="Sinhorn"
+border="0" width="500" height="375"></a><br>
+<h2>Optimization Foundations for Reinforcement Learning (Dec
+14) <br>
+</h2>
+11) <a href="https://arxiv.org/abs/1905.13278">A stochastic
+derivative free optimization method with momentum</a> <br>
+Eduard Gorbunov, Adel Bibi, Ozan Sener, El Houcine Bergou and
+Peter Richtárik<br>
+<br>
+<a href="posters/Poster-SMTP.pdf"><img
+src="posters/Poster-SMTP_small.png" alt="SMTP" border="0"
+width="371" height="500"></a><br>
+&nbsp;<br>
+12) <a href="https://arxiv.org/abs/1905.11373">Revisiting
+stochastic extragradient</a><br>
+Konstantin Mishchenko, Dmitry Kovalev, Egor Shulgin, Peter
+Richtárik, and Yura Malitsky<br>
+
           <br>
           <br>
           <img alt="" src="imgs/fancy-line.png" width="196" height="36">
