--- a/index.html
+++ b/index.html
@@ -29,6 +29,52 @@
       <div id="wrapper" class="main">
         <div id="content">
 
+
+<h3>February 11, 2020</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2002.04670">"Variance Reduced Coordinate Descent with Acceleration: New Method With a
+  Surprising Application to Finite-Sum Problems"</a> -
+joint work with <a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> and <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a>.<br>
+<br>
+
+Abstract: <i>We propose an accelerated version of stochastic variance reduced coordinate descent -- ASVRCD. As other
+variance reduced coordinate descent methods such as SEGA or SVRCD, our method can deal with problems that include a
+non-separable and non-smooth regularizer, while accessing a random block of partial derivatives in each iteration only.
+However, ASVRCD incorporates Nesterov's momentum, which offers favorable iteration complexity guarantees over both SEGA
+and SVRCD. As a by-product of our theory, we show that a variant of Allen-Zhu (2017) is a specific case of ASVRCD,
+recovering the optimal oracle complexity for the finite sum objective.</i> <br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>February 10, 2020</h3>
+<h1>Konstantin Giving a Series of Talks in the US and UK</h1>
+
+<br>
+<a href="https://konstmish.github.io/">Konstantin Mishchenko</a> is giving several talks in New York, London and Oxford. Here is his schedule:
+<br>
+<br>
+10 February, Facebook Research, New York, "Adaptive Gradient Descent Without Descent"<br>
+12 February, Deepmind, London, "Adaptive Gradient Descent Without Descent"<br>
+12 February, UCL Gatsby Computational Neuroscience Unit, London, "Sinkhorn Algorithm as a Special Case of Stochastic Mirror Descent" <br>
+14 February, Oxford University, Oxford, "Adaptive Gradient Descent Without Descent" <br>
+14 February, Imperial College London, London, "Sinkhorn Algorithm as a Special Case of Stochastic Mirror Descent" <br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>February 9, 2020</h3>
 <h1>New Paper</h1>
 <br>
@@ -51,7 +97,7 @@ on the convergence of SGD under Quadratic Functional Growth and convexity, which
 independent interest. Moreover, we perform our analysis in a framework which allows for a detailed
 study of the effects of a wide array of sampling strategies and minibatch sizes for finite-sum
 optimization problems. We corroborate our theoretical results with experiments on real and
-synthetic data.</i> <br> 
+synthetic data.</i> <br>
 
 <br>
 <br>
