--- a/index.html
+++ b/index.html
@@ -61,12 +61,13 @@ recovering the optimal oracle complexity for the finite sum objective.</i> <br>
 <a href="https://konstmish.github.io/">Konstantin Mishchenko</a> is giving several talks in New York, London and Oxford. Here is his schedule:
 <br>
 <br>
+<br>
 
 February 10, Facebook Research, New York, "Adaptive Gradient Descent Without Descent"<br><br>
 February 12, Deepmind, London, "Adaptive Gradient Descent Without Descent"<br><br>
 February 12, UCL Gatsby Computational Neuroscience Unit, London, "Sinkhorn Algorithm as a Special Case of Stochastic Mirror Descent" <br><br>
 February 14, Oxford University, Oxford, "Adaptive Gradient Descent Without Descent" <br><br>
-February 14, Imperial College London, London, "Sinkhorn Algorithm as a Special Case of Stochastic Mirror Descent" <br><br>
+February 14, Imperial College London, London, "Sinkhorn Algorithm as a Special Case of Stochastic Mirror Descent" <br>
 
 <br>
 <br>
