--- a/i_papers.html
+++ b/i_papers.html
@@ -57,7 +57,7 @@
           <h2> Prepared in 2020 </h2>
 
           [120] Filip Hanzely, Dmitry Kovalev and Peter Richtárik<br>
-          <b>Variance reduced coordinate descent with acceleration: new method with a surprising application to finite-sum problems"</b><br>
+          <b>Variance reduced coordinate descent with acceleration: new method with a surprising application to finite-sum problems</b><br>
           [<a href="https://arxiv.org/abs/2002.04670">arXiv</a>]<br>
           <br>
 
