--- a/index.html
+++ b/index.html
@@ -30,6 +30,64 @@
         <div id="content">
 
 
+<h3>February 14, 2020</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2002.05516">"Federated Learning of a Mixture of Global and Local Models"</a> -
+joint work with <a href="https://fhanzely.github.io/index.html">Filip Hanzely</a>.<br>
+<br>
+
+Abstract: <i>We propose a new optimization formulation for training federated learning models. The standard
+  formulation has the form of an empirical risk minimization problem constructed to find a single global
+  model trained from the private data stored across all participating devices. In contrast, our formulation
+  seeks an explicit trade-off between this traditional global model and the local models, which can be learned
+  by each device from its own private data without any communication. Further, we develop several efficient
+  variants of SGD (with and without partial participation and with and without variance reduction) for solving
+  the new formulation and prove communication complexity guarantees. Notably, our methods are similar but not
+  identical to federated averaging / local SGD, thus shedding some light on the essence of the elusive method.
+  In particular, our methods do not perform full averaging steps and instead merely take steps towards averaging.
+  We argue for the benefits of this new paradigm for federated learning.</i> <br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>February 12, 2020</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2002.05359">"Adaptivity of Stochastic Gradient Methods for Nonconvex Optimization"</a> -
+joint work with <a href="https://samuelhorvath.github.io">Samuel Horváth</a>,
+<a href="https://statistics.berkeley.edu/people/lihua-lei">Lihua Lei</a> and
+<a href="https://people.eecs.berkeley.edu/~jordan/">Michael I. Jordan</a>.<br>
+<br>
+
+Abstract: <i>Adaptivity is an important yet under-studied property in modern optimization theory.
+  The gap between the state-of-the-art theory and the current practice is striking in that algorithms
+  with desirable theoretical guarantees typically involve drastically different settings of hyperparameters,
+  such as step-size schemes and batch sizes, in different regimes. Despite the appealing theoretical results,
+  such divisive strategies provide little, if any, insight to practitioners to select algorithms that work broadly
+  without tweaking the hyperparameters. In this work, blending the "geometrization" technique introduced by
+  Lei & Jordan 2016 and the SARAH algorithm of Nguyen et al., 2017, we propose the Geometrized SARAH
+  algorithm for non-convex finite-sum and stochastic optimization. Our algorithm is proved to achieve adaptivity
+  to both the magnitude of the target accuracy and the Polyak-Łojasiewicz (PL) constant if present. In addition,
+  it achieves the best-available convergence rate for non-PL objectives simultaneously while outperforming
+  existing algorithms for PL objectives.</i> <br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>February 11, 2020</h3>
 <h1>New Paper</h1>
 <br>
