--- a/i_papers.html
+++ b/i_papers.html
@@ -56,6 +56,16 @@
 
           <h2> Prepared in 2020 </h2>
 
+          [122] Filip Hanzely and Peter Richtárik<br>
+          <b>Federated learning of a mixture of global and local models</b><br>
+          [<a href="https://arxiv.org/abs/2002.05516">arXiv</a>]<br>
+          <br>
+
+          [121] Samuel Horváth, Lihue Lei, Peter Richtárik and Michael I. Jordan<br>
+          <b>Adaptivity of stochastic gradient methods for nonconvex optimization</b><br>
+          [<a href="https://arxiv.org/abs/2002.05359">arXiv</a>]<br>
+          <br>
+
           [120] Filip Hanzely, Dmitry Kovalev and Peter Richtárik<br>
           <b>Variance reduced coordinate descent with acceleration: new method with a surprising application to finite-sum problems</b><br>
           [<a href="https://arxiv.org/abs/2002.04670">arXiv</a>]<br>
