--- a/i_papers.html
+++ b/i_papers.html
@@ -58,6 +58,7 @@
 
           [122] Filip Hanzely and Peter Richtárik<br>
           <b>Federated learning of a mixture of global and local models</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2002.05516">arXiv</a>]<br>
           <br>
 
