--- a/i_papers.html
+++ b/i_papers.html
@@ -62,7 +62,7 @@
           [<a href="https://arxiv.org/abs/2002.05516">arXiv</a>]<br>
           <br>
 
-          [121] Samuel Horváth, Lihue Lei, Peter Richtárik and Michael I. Jordan<br>
+          [121] Samuel Horváth, Lihua Lei, Peter Richtárik and Michael I. Jordan<br>
           <b>Adaptivity of stochastic gradient methods for nonconvex optimization</b><br>
           [<a href="https://arxiv.org/abs/2002.05359">arXiv</a>]<br>
           <br>
