--- a/i_talks.html
+++ b/i_talks.html
@@ -32,98 +32,73 @@
       </ul>
       <div id="wrapper" class="main">
         <div id="content">
+
           <h2> Future Talks</h2>
-          <a href="https://ims.nus.edu.sg/events/2020/opt/index.php">Fast
 
-
-
-
-
-
-
-
-
-            Optimization Algorithms in the Big Data Era</a>, Institute
-          of Mathematical Sciences, National University of Singapore,
-          Singapore, August 3-7, 2020 (invited)<br>
-          <br>
-          <a href="https://icml.cc">ICML 2020</a>, Vienna, Austria, July
-          13-18, 2020<br>
-          <br>
-          Mathematics Research Seminar, Seoul National University,
-          Seoul, South Korea, June 2020 (invited)<br>
-          <br>
-          <a
-href="https://www.google.com/search?client=safari&amp;rls=en&amp;q=IFORS+2020&amp;ie=UTF-8&amp;oe=UTF-8">IFORS
-
-
-
-            2020</a>, Coex, Seoul, Korea, June 21-26, 2020 (invited
-          session organizer) <br>
-          <br>
-          <a href="http://www.mathdatalab.org">Mathematics of Complex
-            Data</a>, KTH Royal Institute of Technology, Stockholm,
-          Sweden, June 8-11, 2020 (invited)<br>
-          <br>
-          <a
-            href="https://www.polyu.edu.hk/ama/events/conference/op20/en/">SIAM
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            Conference on Optimization,</a> The Hong Kong Polytechnic
-          University, Hong Kong, China, May 26-29, 2020 (organizing
-          committee member)<br>
-          <br>
-          <a href="https://iclr.cc/Conferences/2020/">ICLR 2020</a>,
-          Addis Ababa, Ethiopia, April 26-30, 2020<br>
-          <br>
-          Research Seminar, EPFL, Switzerland, April 3, 2020<br>
+          <a href="https://ims.nus.edu.sg/events/2020/opt/index.php">Fast Optimization Algorithms in the Big Data Era</a>, Institute
+          of Mathematical Sciences, National University of Singapore, Singapore, August 3-7, 2020 (invited)
           <br>
           <br>
+
+          <a href="https://icml.cc">ICML 2020</a>, Vienna, Austria, July 13-18, 2020
+          <br>
+          <br>
+
+          Mathematics Research Seminar, Seoul National University, Seoul, South Korea, June 2020 (invited)
+          <br>
+          <br>
+
+          <a href="https://www.google.com/search?client=safari&amp;rls=en&amp;q=IFORS+2020&amp;ie=UTF-8&amp;oe=UTF-8">IFORS 2020</a>, Coex, Seoul, Korea, June 21-26, 2020 (invited
+          session organizer)
+          <br>
+          <br>
+
+          <a href="http://www.mathdatalab.org">Mathematics of Complex Data</a>, KTH Royal Institute of Technology, Stockholm, Sweden, June 8-11, 2020 (invited)
+          <br>
+          <br>
+
+          <a href="https://www.polyu.edu.hk/ama/events/conference/op20/en/">SIAM Conference on Optimization,</a> The Hong Kong Polytechnic
+          University, Hong Kong, China, May 26-29, 2020 (organizing committee member)
+          <br>
+          <br>
+
+          <a href="https://iclr.cc/Conferences/2020/">ICLR 2020</a>, Addis Ababa, Ethiopia, April 26-30, 2020
+          <br>
+          <br>
+
+          AI: Collaborate and Accelerate, College of Computer Sciences and Information Technology (CCSIT), King Faisal University, Al-Ahsa, Saudi Arabia, April 8, 2020 (keynote speaker)          
+          <br>
+          <br>
+
+          Research Seminar, EPFL, Switzerland, April 3, 2020
+          <br>
+          <br>
+
+
           <h2>Video Talks</h2>
-          <p><a href="https://www.youtube.com/watch?v=a05S0kL5u30">A
-              Guided Walk Through the ZOO of Stochastic Gradient Descent
-              Methods</a> (5 hrs)<br>
-            MIPT, Moscow, Russia, 9/2019<br>
-          </p>
-          <p><a href="https://www.youtube.com/watch?v=n1ELUphtbgg">Variance
 
+          <a href="https://www.youtube.com/watch?v=a05S0kL5u30">A Guided Walk Through the ZOO of Stochastic Gradient Descent Methods</a> (5 hrs)
+          <br> MIPT, Moscow, Russia, 9/2019
+          <br>
+          <br>
 
+          <a href="https://www.youtube.com/watch?v=n1ELUphtbgg">Variance Reduction for Gradient Compression</a> (38 mins)<br>
+            Rutgers University, 9/2019
+          <br>
+          <br>
 
+          <a href="https://www.youtube.com/watch?v=gjgEck0zU7w">Stochastic Quasi-Gradient Methods: Variance Reduction via Jacobian Sketching</a> (33 mins)<br>
+            Simons Institute, Berkeley, 9/2018
+          <br>
+          <br>
 
-
-
-
-
-Reduction
-              for Gradient Compression</a> (38 mins)<br>
-            Rutgers University, 9/2019<br>
-          </p>
-          <p><a href="https://www.youtube.com/watch?v=gjgEck0zU7w">Stochastic
-              Quasi-Gradient Methods: Variance Reduction via Jacobian
-              Sketching</a> (33 mins)<br>
-            Simons Institute, Berkeley, 9/2018<br>
-          </p>
           <p><a
               href="https://slideslive.com/38917651/convex-optimization">SGD:
               General Analysis and Improved Rates</a> (start: 35:40 end:
             53:11) <br>
             ICML 2019<br>
           </p>
+
           <p><a href="https://www.youtube.com/watch?v=DLbZJnz04cE">Empirical
               Risk Minimization: Complexity, Duality, Sampling, Sparsity
               and Big Data</a> (85 mins)<br>
