--- a/i_papers.html
+++ b/i_papers.html
@@ -56,6 +56,12 @@
 
           <h2> Prepared in 2020 </h2>
 
+          [123] Mher Safaryan, Egor Shulgin and Peter Richtárik<br>
+          <b>"Uncertainty principle for communication compression in distributed and federated learning and the search for an optimal compressor</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="papers/kashin.pdf">pdf</a>]<br>
+          <br>
+
           [122] Filip Hanzely and Peter Richtárik<br>
           <b>Federated learning of a mixture of global and local models</b><br>
           <span class="important">Federated Learning Paper</span><br>
