--- a/index.html
+++ b/index.html
@@ -39,7 +39,21 @@
 joint work with <a href="https://mher-safaryan.github.io">Mher Safaryan</a> and <a href="https://scholar.google.com/citations?user=XlmSx18AAAAJ&hl=en">Egor Shulgin</a>.<br>
 <br>
 
-Abstract: <i>In the last few years, various communication  compression techniques have  emerged  as an indispensable  tool helping to alleviate the communication bottleneck in distributed learning. However, despite the fact {\em biased} compressors often show superior performance in practice when compared to the much more studied and understood {\em unbiased} compressors,  very little is known about them. In this work we study three classes of biased compression operators, two of which are new, and their performance when applied to  (stochastic) gradient descent and distributed (stochastic) gradient descent.  We show for the first time that biased compressors can lead to linear convergence rates both in the single node and distributed settings. Our {\em distributed} SGD method  enjoys the ergodic rate $\cO\left(\frac{\delta L^2 \exp(-K) }{\mu^2}  + \frac{(C + D)}{K\mu}\right)$, where $\delta$ is a compression parameter which grows when more compression is applied, $L$ and $\mu$ are the smoothness and strong convexity constants, $C$ captures stochastic gradient noise ($C=0$ if full gradients are computed on each node) and $C$ captures the variance of the gradients at the optimum ($C=0$ for over-parameterized models).  Further,  via a theoretical study of several synthetic and empirical distributions of communicated gradients, we shed light on why and by how much  biased compressors outperform  their unbiased variants.  Finally, we  propose a new highly performing biased compressor---combination of Top-$k$ and natural dithering---which in our experiments outperforms all other compression techniques.</i> <br>
+Abstract: <i>
+In order to mitigate the high communication cost in  distributed and federated learning, various vector compression schemes, such as
+quantization, sparsification and dithering, have become very popular. In designing a compression method, one aims to communicate as
+few bits as possible, which minimizes the cost per communication round, while at the same time attempting to impart as little distortion
+(variance) to the communicated messages as possible, which minimizes the adverse effect of the compression on the overall number of
+communication rounds. However, intuitively, these two goals are fundamentally in conflict: the more compression we allow, the more
+distorted the messages become. We formalize this intuition and prove an {\em uncertainty principle} for randomized compression operators,
+thus quantifying this limitation mathematically, and {\em effectively providing lower bounds on what might be achievable with communication
+compression}. Motivated by these developments, we call for the search for the optimal compression operator. In an attempt to take a first
+step in this direction, we construct a new unbiased compression method inspired by the Kashin representation of vectors, which we call
+{\em Kashin compression (KC)}. In contrast to all previously proposed compression mechanisms, we prove that KC enjoys a {\em dimension
+independent} variance bound with an explicit formula even in the regime when only a few bits need to be communicate per each vector entry.
+We show how KC can be provably and efficiently combined with several existing optimization algorithms, in all cases leading to communication
+complexity improvements on previous state of the art.
+</i> <br>
 
 <br>
 <br>
