--- a/i_papers.html
+++ b/i_papers.html
@@ -57,7 +57,7 @@
           <h2> Prepared in 2020 </h2>
 
           [123] Mher Safaryan, Egor Shulgin and Peter Richtárik<br>
-          <b>"Uncertainty principle for communication compression in distributed and federated learning and the search for an optimal compressor</b><br>
+          <b>Uncertainty principle for communication compression in distributed and federated learning and the search for an optimal compressor</b><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="papers/kashin.pdf">pdf</a>]<br>
           <br>
