update Kashin paper to arXiv

--- a/i_papers.html
+++ b/i_papers.html
@@ -59,7 +59,7 @@
           [123] Mher Safaryan, Egor Shulgin and Peter Richtárik<br>
           <b>Uncertainty principle for communication compression in distributed and federated learning and the search for an optimal compressor</b><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="papers/kashin.pdf">pdf</a>]<br>
+          [<a href="https://arxiv.org/abs/2002.08958">arXiv</a>]<br>
           <br>
 
           [122] Filip Hanzely and Peter Richtárik<br>
