--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <br>
 
 <span class="important">New paper out:</span>
-<a href="papers/kashin.pdf">"Uncertainty Principle for Communication Compression in Distributed and Federated Learning and the Search for an Optimal Compressor"</a> -
+<a href="https://arxiv.org/abs/2002.08958">"Uncertainty Principle for Communication Compression in Distributed and Federated Learning and the Search for an Optimal Compressor"</a> -
 joint work with <a href="https://mher-safaryan.github.io">Mher Safaryan</a> and <a href="https://scholar.google.com/citations?user=XlmSx18AAAAJ&hl=en">Egor Shulgin</a>.<br>
 <br>
 
