--- a/i_papers.html
+++ b/i_papers.html
@@ -56,6 +56,11 @@
 
           <h2> Prepared in 2020 </h2>
 
+          [124] Filip Hanzely, Nikita Doikov, Peter Richtárik and Yurii Nesterov<br>
+          <b>Stochastic subspace cubic Newton method</b><br>
+          [<a href="https://arxiv.org/abs/2002.08958">arXiv</a>] [code: SSCN] <br>
+          <br>
+
           [123] Mher Safaryan, Egor Shulgin and Peter Richtárik<br>
           <b>Uncertainty principle for communication compression in distributed and federated learning and the search for an optimal compressor</b><br>
           <span class="important">Federated Learning Paper</span><br>
@@ -142,15 +147,16 @@
 
           [110] Xun Qian, Zheng Qu and Peter Richtárik<br>
           <b>L-SVRG and L-Katyusha with arbitrary sampling</b><br>
-          [<a href="https://arxiv.org/abs/1906.01481">arXiv</a>] [code:
-          L-SVRG, L-Katyusha]<br>
+          [<a href="https://arxiv.org/abs/1906.01481">arXiv</a>] [code: L-SVRG, L-Katyusha]<br>
           <br>
+
           [109] Xun Qian, Alibek Sailanbayev, Konstantin Mishchenko and
           Peter Richtárik<br>
           <b>MISO is making a comeback with better proofs and rates</b><br>
           [<a href="https://arxiv.org/abs/1906.01474">arXiv</a>] [code:
           MISO]<br>
           <br>
+
           [108] Eduard Gorbunov, Adel Bibi, Ozan Sezer, El Houcine
           Bergou and Peter Richtárik<br>
           <b>A stochastic derivative free optimization method with
@@ -161,6 +167,7 @@
           [<a href="https://arxiv.org/abs/1905.13278">arXiv</a>] [<a
             href="posters/Poster-SMTP.pdf">poster</a>] [code: SMTP]<br>
           <br>
+
           [107] Mher Safaryan and Peter Richtárik<br>
           <b>On stochastic sign descent methods</b><br>
           [<a href="https://arxiv.org/abs/1905.12938">arXiv</a>] [code:
